# Gleipi

./: .gitignore  PROJECT_SETUP.md  SETUP_GUIDE.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
public/: 404.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CategoryIcon.tsx
src/components/Calendar/: DayView.tsx  MonthView.tsx  WeekView.tsx
src/components/TodoFormModal/: TodoFormModal.tsx
src/components/TodoItem/: TodoItem.tsx
src/screens/: AIScreen.tsx  CalendarScreen.tsx  FreeTimeScreen.tsx  SettingsScreen.tsx  TodoScreen.tsx
src/services/: ai.ts  notification.ts  speech.ts  storage.ts  tts.ts  ttsDateHelper.ts
src/store/: calendarStore.ts  categoryStore.ts  todoStore.ts
src/styles/: global.css
src/types/: index.ts  speech.d.ts
src/utils/: date.ts  platform.ts
