[package]
name = "gleipi"
version = "0.1.0"
description = "gleipi — 일정 관리 앱"
authors = ["you"]
edition = "2021"

[lib]
name = "gleipi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
